--- a/2023/.vscode/settings.json
+++ b/2023/.vscode/settings.json
@@ -1,3 +1,5 @@
 {
-    "files.insertFinalNewline": false
+    "files.insertFinalNewline": false,
+    "editor.formatOnSave": true,
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
 }
