--- a/2023/.vscode/settings.json
+++ b/2023/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
-    "files.insertFinalNewline": false,
-    "editor.formatOnSave": true,
-    "editor.defaultFormatter": "esbenp.prettier-vscode"
+  "files.insertFinalNewline": false,
+  "editor.formatOnSave": true,
+  "editor.defaultFormatter": "esbenp.prettier-vscode",
+  "editor.tabSize": 2
 }
